-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.6.0-beta
-
None
-
804ae90c80c1796293ab4159811993e6f92bec20
Some recent changes in Qt 5 cause error when building debug helper on Mac:
Building helper(s) with toolchain 'MacPorts Clang (x86 32bit)'... Building helper 'GDB helper' in /Qt/5.0/qtbase/qtc-debugging-helper/ Running /Qt/5.0/qtbase/bin/qmake -spec macx-clang-libc++-32 dumper.pro -nocache CONFIG+=x86 ... Running /usr/bin/make all -k ... Error running '/usr/bin/make all -k' in /Qt/5.0/qtbase/qtc-debugging-helper/: The process returned exit code 2: clang++ -c -pipe -mmacosx-version-min=10.6 -arch i386 -stdlib=libc++ -g -gdwarf-2 -Wall -W -fPIC -DUSE_QT_CORE=1 -DUSE_QT_GUI=1 -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I../mkspecs/macx-clang-libc++-32 -I. -I../include -I../include/QtWidgets -I../include/QtGui -I../include/QtCore -I. -I/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers -I/System/Library/Frameworks/AGL.framework/Headers -F/Qt/5.0/qtbase/lib -o dumper.o dumper.cpp dumper.cpp:1698:76: error: no member named 'numBytes' in 'QImage' const QByteArray ba(QByteArray::fromRawData((const char*)im.bits(), im.numBytes())); ~~ ^ dumper.cpp:2371:50: error: no member named 'toAscii' in 'QString' const int index = mob->indexOfProperty(iname.toAscii()); ~~~~~ ^ 2 errors generated. make: *** [dumper.o] Error 1 make: Target `all' not remade because of errors. Build failed.