Mac: Fix Qt5 debug helper compilation.

Task-number: QTCREATORBUG-7917

Change-Id: I6e76923e02c9c1ccc411d2f0978fe63e867e6469
Reviewed-by: hjk <qthjk@ovi.com>