share/qtcreator/dumper/dumper.cpp
@@ -1695,7 +1695,7 @@ static void qDumpQImage(QDumper &d)
 static void qDumpQImageData(QDumper &d)
 {
     const QImage &im = *reinterpret_cast<const QImage *>(d.data);
-    const QByteArray ba(QByteArray::fromRawData((const char*)im.bits(), im.numBytes()));
+    const QByteArray ba(QByteArray::fromRawData((const char*)im.bits(), im.byteCount()));
     d.putItem("type", NS "QImageData");
     d.putItem("numchild", "0");
 #if 1
@@ -2368,7 +2368,7 @@ static void qDumpQObjectProperty(QDumper &d)
     if (dotPos == -1)
         return;
     iname.remove(0, dotPos + 1);
-    const int index = mob->indexOfProperty(iname.toAscii());
+    const int index = mob->indexOfProperty(iname.toLatin1());
     if (index == -1)
         return;
     const QMetaProperty mop = mob->property(index);
